[project]
name = "edf-neon-client"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["edf", "neon", "client"]
description = "EDF Neon Client"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
  { name="CERT-EDF", email="cert@edf.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Security",
]
dependencies = [
    "edf-neon-core~=3.0",
]


[project.urls]
"Homepage" = "https://github.com/cert-edf/neon"
"Repository" = "https://github.com/cert-edf/neon"
"Bug Tracker" = "https://github.com/cert-edf/neon/issues"


[build-system]
requires = ["setuptools>=78", "setuptools_scm>=8.2", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["."]
include = ["edf_neon_client", "edf_neon_client.*"]


[tool.setuptools_scm]
root = ".."
version_file = "edf_neon_client/__version__.py"


[tool.black]
line-length = 79
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 79
